--- a/style.css
+++ b/style.css
@@ -7,4 +7,99 @@
 
 body {
     font-family: sans-serif;
+    /*debug*/
+    height: 100%;
+    background-color: lightcoral;
 }
+
+
+/************** MAIN **************/
+main {
+    display: flex;
+    height: calc(100vh - 80px);
+    width: 100%;
+    /*debug*/
+    background-color: lightsalmon;
+}
+
+.main-content {
+    overflow-y: scroll;
+    overflow-x: hidden;
+}
+
+.sx-utility {
+    width: 150px;
+    height: 100%;
+    background-color: lightgreen;
+}
+
+.pro {
+    height: 80px;
+    width: calc(100vw - 80px);
+    /*debug*/
+    background-color: lightyellow;
+}
+
+.d-flex {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.play {
+    gap: 10px;
+    margin-left: 10px;
+}
+
+.card {
+    height: 120px;
+    width: calc(100% / 6 - 10px);
+    margin-top: 30px;
+    /*debug*/
+    background-color: lightseagreen;
+}
+
+.recently-played {
+    margin-top: 20px;
+}
+
+.recently-played:last-child {
+    margin-bottom: 10px;
+}
+
+
+/************** FOOTER **************/
+.audio-control {
+    width: 100%;
+    height: 80px;
+    /*debug*/
+    background-color: lime;
+}
+
+
+
+
+
+/************** RESPONSIVE **************/
+@media screen and (max-width:1100px) {
+    .card {
+        height: 150px; 
+        width: calc(100% / 4 - 10px);
+    }
+
+    }
+
+
+    @media screen and (max-width:700px) {
+        .card {
+            height: 150px; 
+            width: calc(100% / 2 - 10px);
+        }
+
+    }
+
+
+
+
+    @media screen and (max-width:600px) {
+
+    }
