--- a/style.css
+++ b/style.css
@@ -27,11 +27,41 @@ main {
     overflow-x: hidden;
 }
 
+
+
+/************** SIDEBAR **************/
 .sx-utility {
     width: 150px;
     height: 100%;
+    text-align: left;
+    padding: 10px;
+    /*debug*/
     background-color: lightgreen;
 }
+
+.logo {
+    width: 90%;
+}
+
+.small-logo {
+    display: none;
+}
+
+.nav-list ul li {
+    margin-bottom: 10px;
+    text-decoration: none;
+}
+
+.icon-list {
+    height: 30px;
+    vertical-align: middle;
+}
+
+.main-content { 
+    overflow-y: scroll; 
+    overflow-x: hidden; 
+}
+
 
 .pro {
     height: 80px;
@@ -60,6 +90,7 @@ main {
 
 .recently-played {
     margin-top: 20px;
+    margin-left: 10px;
 }
 
 .recently-played:last-child {
@@ -101,5 +132,7 @@ main {
 
 
     @media screen and (max-width:600px) {
-
+        .sx-utility {
+            width: 40px;
+        }
     }
