--- a/style.css
+++ b/style.css
@@ -7,10 +7,10 @@
 
 body {
     font-family: sans-serif;
-    /*debug*/
     height: 100%;
-    background-color: lightcoral;
+    background-color: lightyellow;
 }
+
 
 ul li {
     list-style-type: none;
@@ -19,6 +19,19 @@ ul li {
 a {
     text-decoration: none;
     color: #a3a3a3;
+}
+
+.d-flex { 
+    display: flex; 
+    flex-wrap: wrap; 
+} 
+
+.flex {
+    display: flex;
+}
+
+.wrap {
+    flex-wrap: wrap;
 }
 
 
@@ -34,20 +47,20 @@ main {
     height: 80px;
     width: calc(100vw - 150px);
     position: fixed;
+    background-color: rgb(8, 11, 18, 0.6);
 }
 
 .upgrade {
-    width: 22%;
-    border-color: white;
+    width: 200px;
     padding: 10px;
     border-radius: 30px;
     position: absolute;
     right: 35px;
     top: 20px;
     text-align: center;
-    background-color: blue;
-    display: inline-block;
     font-size: 13px;
+    border: 1px solid white;
+    margin-right: 10px;
 }
 
 .nav-list-main {
@@ -60,33 +73,80 @@ main {
     color: #7d7f84;
 }
 
+.line {
+    width: 35px;
+    border-bottom: 1px solid chartreuse;
+    padding-bottom: 1px;
+}
+
 
 
 /************** SIDEBAR **************/
-.sx-utility {
-    width: 170px;
-    /*height: 100%;*/
+.sx-utility { 
+    width: 170px; 
     text-align: left;
-    padding: 10px;
-    color: #a3a3a3;
-    background-color: black;
-}
+    color: #A3A3A3;
+    background-color: black; 
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+} 
 
 .sx-utility h3 {
     color: white;
+    padding-top: 15px;
+}
+
+.text-aside {
+    position: absolute;
 }
 
 .logo {
     width: 90%;
+    margin-bottom: 25px;
+    margin-top: 10px;
+}
+
+.padding-aside {
+    padding-left: 10px;
+    font-size: x-small;
+}
+
+.home-border {
+    border-left: 3px solid chartreuse;
+    color: white;
 }
 
 .small-logo {
     display: none;
 }
 
-.nav-list ul li {
+.nav {
+    margin-top: 100px;
+}
+
+.nav-list ul li{
     margin-bottom: 10px;
     margin-top: 5px;
+}
+
+i {
+    font-size: 30px;
+}
+
+.app span {
+    
+    font-size: 14px;
+}
+
+.app i {
+    font-size: 14px;
+    padding-right: 5px;
+    padding-left: 5px;
+}
+
+.text-playlist {
+    vertical-align: super;
 }
 
 .icon-list {
@@ -95,22 +155,29 @@ main {
 }
 
 .nome-playlist ul li {
-    line-height: 35px;
-    font-size: 15px;
+    line-height: 30px;
+    font-size: 10px;
 }
 
 .profile {
-    margin-top: 10px;
+    margin-top: 20px;
+    margin-bottom: 2px;
+}
+
+.hr-sidebar {
+    margin-right: 15px;
 }
 
 .profile-photo {
     object-fit: cover;
-    border-radius: 50%;
-    background-color: lightgray;
+    border-radius: 50px;
+    background-color: grey;
+    margin-right: 5px;
 }
 
 .profile h3 {
     display: inline-block;
+    font-size: 15px;  
 }
 
 
@@ -118,27 +185,36 @@ main {
 /************** CONTENT **************/
 .main-content { 
     overflow-y: scroll; 
-    overflow-x: hidden;
-    width: calc(100% - 170px); 
+    overflow-x: hidden; 
+    width: calc(100% - 170px);
 }
 
 .main-content img {
     width: 100%;
 }
 
-.d-flex {
-    display: flex;
-    flex-wrap: wrap;
-}
-
 .play {
-    gap: 10px;
+    gap: 10px; 
 }
 
-.card {
+.card { 
     width: calc(100% / 6 - 10px);
     margin-top: 30px;
     margin-bottom: 10px;
+    position: relative;
+} 
+
+.hover-card {
+    display: none;
+    text-align: center;
+    background-color: rgb(0, 0, 0, 0.8);
+    color: white;
+    width: 100%;
+}
+
+.card p {
+    color: gray;
+    font-size: 13px;
 }
 
 .text {
@@ -148,66 +224,130 @@ main {
 
 .recently-played {
     margin-top: 20px;
+    margin-left: 10px;
 }
 
 .main-content h4, h3 {
     padding-bottom: 10px;
 }
 
+.ascolti {
+    color: grey;
+    font-size: 12px;
+}
 .recently-played:last-child {
     margin-bottom: 15px;
+}
+
+.radius {
+    border-radius: 50%;
 }
 
 
 /************** FOOTER **************/
 .audio-control {
-    width: 100%;
+    width: 100%; 
     height: 100px;
-    padding: 30px 20px;
+    padding: 30px 20px; 
     background-color: #282828;
+    color: white;
     display: flex;
+    justify-content: space-between;
+    position: fixed;
 }
 
 .footer i {
-    font-size: 20px;
-}
-
-.footer-left,
-.footer-right {
-    width: 25%;
-}
-
-.play-center {
-    width: 40%;
-    height: 60px;
+    font-size: 18px;
 }
 
 .footer-left {
-    display: flex;
-    gap: 20px;
-    background-color: chartreuse;
-    justify-content: space-between;
-}
-
-.bar-music {
-    color: blueviolet;
-    width: 250px;
-    height: 5px;
-    border-radius: 3px;
+    width: 250px; 
+    display: flex;  
 }
 
 .play-center {
+    width: 50%;
+    height: 70px;
+}
+
+.actions-music {
+    justify-content: center;
+    margin-bottom: 15px;
+}
+
+.foot-text h5 {
+    color: lightgray;
+    font-size: 12px;
+}
+
+.footer-left .foot-text {
+    color: lightgray;
+    padding: 5px 0 0 10px;
+}
+
+.footer-left span i {
+    padding: 10px 0 0 10px;
+    color: lightgrey;
+}
+
+.time-music {
     display: flex;
-    background-color: coral;
-    justify-content: space-between;
-    align-items: center;
+    width: 100%;
+    align-items:center;
+    justify-content: center;
+    gap: 10px;
+}
+
+.bar-music {
+    width: 70%;
+    background-color: grey;
+    border-radius: 3px;
+}
+
+.progress-bar {
+    border: 3px solid lightgray;
+    width: 28%;
+    border-radius: 3px;
+    position: relative;
+}
+
+.dot-bar {
+    width: 10px;
+    height: 100%;
+    border-radius: 50%;
+    padding: 8px;
+    background-color: white;
+    position: absolute;
+    right: -2px;
+    top: -8px;
+    display: none;
 }
 
 .footer-right {
+    width: 200px;
     display: flex;
     justify-content: space-between;
-    background-color: aqua;
 }
+
+.list-foot {
+    gap: 15px;
+    align-items: center; 
+}
+
+.footer-right ul li .bar-music{
+    width: 130px;
+}
+
+.play-center {
+    margin-left: 15px;
+}
+
+
+
+
+
+
+
 
 
 
@@ -216,53 +356,122 @@ main {
 /************** RESPONSIVE **************/
 @media screen and (max-width:1100px) {
     .card {
+        height: 200px; 
+        width: calc(100% / 4 - 10px); 
+    }
+
+    .responsive .card {
+        margin-bottom: 90px;
+    }
+
+    .recently-played .last {
+        margin-top: 60px;
+    }
+
+    .bar-music {
+        width: 200px;
+    }
+
+    .fl-icons i{
+        display: block;
+        padding: 0px;
+    }
+    .footer-left {
+        width: 165px;
+    }
+    .list-foot {
+        gap: 5px;
+    }
+
+    .audio-control {
+        padding: 30px 8px;
+    }
+}
+
+@media screen and (max-width:700px) {
+    .card {
         height: 150px; 
-        width: calc(100% / 4 - 10px);
+        width: calc(100% / 2 - 10px);
     }
 
+    .responsive .card {
+        margin-bottom: 150px;
     }
 
-
-    @media screen and (max-width:700px) {
-        .card {
-            height: 150px; 
-            width: calc(100% / 2 - 10px);
-        }
-
+    .recently-played .last {
+        margin-top: 125px;
     }
 
+    .bar-music {
+        width: 50%;
+    }
+}
 
+@media screen and (max-width:600px) {
 
+    .card {
+        height: 150px; 
+        width: calc(100% / 2 - 10px);
+    }
 
-    @media screen and (max-width:600px) {
-        .card {
-            height: 150px; 
-            width: calc(100% / 2 - 10px);
-        }
-    
-    
-        .main-content {
-            width: 100%;
-        }
-    
-        .recently-played {
-            margin-top: 10px;
-        }
+    .recently-played {
+       padding-top: 30px;
+    }
+
+    .main-content {
+        width: 100%;
     }
     
+    .recently-played {
+        margin-top: 20px;
+    }
+
+    .pro {
+        width: calc(100% - 50px);
+    }
     
-        .sx-utility {
-            width: 40px;  
+    .text-playlist,
+    .playlist,
+    .nome-playlist,
+    .app span, .hr-sidebar, .profile a h3, 
+    .nav-list ul li span {
+        display: none;
+    }
     
-        }
-    
-        .nav-list:not(.icon-list) {
-            display: none;
-        }
-    
-        .big-logo {
-            display: none;
-        }
+    .big-logo {
+        display: none;
+    }
+
+    .home-border {
+        border: none;
+    }
+
+    .sx-utility {
+        width: 50px;
+    }
+
+    .small-logo {
+        display: block;
+        width: 80%;
+        text-align: center;
+    }
+
+    .actions-music {
+        gap: 10px;
+    }
+
+    .bar-music {
+        min-width: 125px;
+    }
+
+    .play-center {
+        width: 45%;
+    }
+
+    .list-foot li i {
+        font-size: 16px;
+    }
+}
         
 
 
